[package]
name = "yaeth-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
ethers = "2.0.0"
config = "0.13.3"
serde = { version = "1", features = ["derive"] }
hex = "0.4.3"
tokio = "1.26.0"
